areas/arm64/board_espressobin08_bench_xdp: Pushed git branch
Kernel.org git tree:
- https://git.kernel.org/pub/scm/linux/kernel/git/hawk/net-next-xdp.git/
- Branch: xdp_mvneta01-bench

Link to branch: xdp_mvneta01-bench
 https://git.kernel.org/pub/scm/linux/kernel/git/hawk/net-next-xdp.git/log/?h=xdp_mvneta01-bench

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/arm64/board_espressobin08_bench_xdp.org
+++ b/areas/arm64/board_espressobin08_bench_xdp.org
@@ -23,9 +23,10 @@ In flux Lorenzo GitHub tree with mvneta developement is here:
 - https://github.com/LorenzoBianconi/net-next/tree/mvneta-devel
 
 More stable tree with patches I've tested:
-- TODO create branch on
+- Kernel.org git tree:
 - https://git.kernel.org/pub/scm/linux/kernel/git/hawk/net-next-xdp.git/
-- xdp_mvneta01-bench
+- Branch: xdp_mvneta01-bench
+- [[https://git.kernel.org/pub/scm/linux/kernel/git/hawk/net-next-xdp.git/log/?h=xdp_mvneta01-bench][link to branch]]
 
 * Review notes: Issues with patchset/code
 
